--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,13 @@
 {
   "extends": "airbnb-base",
-  "env": {
-    "node": true
-  },
   "rules": {
-    "no-underscore-dangle": 0
+    "no-console": "off",
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": ["_id"]
+      }
+    ],
+    "linebreak-style": 0
   }
 }
