--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
@@ -19,9 +20,12 @@
   },
   "homepage": "https://github.com/DenisDemenev/express-mesto-gha#readme",
   "devDependencies": {
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
     "mongoose": "^6.9.2"
   }
